--- a/.env
+++ b/.env
@@ -13,4 +13,7 @@ LINKEDIN_SECRET=Xlz2QGroqwgTBVsS
 DOMAIN=MAILGUN_APIKEY=601f4452be1da94a0d6117f5f1993648-b6d086a8-abeadb8f
 MAILGUN_APIKEY=601f4452be1da94a0d6117f5f1993648-b6d086a8-abeadb8f
 
+gitAPPID=7ada37a3ae109508d928
+gitclientID=fa1e6d77961294f3282d22293ffef88ef8ecb022
+
 
